--- a/ANNclassification.ipynb
+++ b/ANNclassification.ipynb
@@ -1527,7 +1527,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ANN Implementation"
+    "# ANN Implementation - Classification"
    ]
   },
   {
@@ -1686,7 +1686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1696,7 +1696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1709,7 +1709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1722,7 +1722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1730,60 +1730,51 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/100\n",
-      "WARNING:tensorflow:From f:\\DataScience\\Bank_Neural_network\\venv\\Lib\\site-packages\\keras\\src\\utils\\tf_utils.py:492: The name tf.ragged.RaggedTensorValue is deprecated. Please use tf.compat.v1.ragged.RaggedTensorValue instead.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "f:\\DataScience\\Bank_Neural_network\\venv\\Lib\\site-packages\\tensorflow\\python\\util\\dispatch.py:1260: SyntaxWarning: In loss categorical_crossentropy, expected y_pred.shape to be (batch_size, num_classes) with num_classes > 1. Received: y_pred.shape=(32, 1). Consider using 'binary_crossentropy' if you only have 2 classes.\n",
-      "  return dispatch_target(*args, **kwargs)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From f:\\DataScience\\Bank_Neural_network\\venv\\Lib\\site-packages\\keras\\src\\engine\\base_layer_utils.py:384: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
-      "\n",
-      "239/250 [===========================>..] - ETA: 0s - loss: 0.0000e+00 - accuracy: 0.7887"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "f:\\DataScience\\Bank_Neural_network\\venv\\Lib\\site-packages\\tensorflow\\python\\util\\dispatch.py:1260: SyntaxWarning: In loss categorical_crossentropy, expected y_pred.shape to be (batch_size, num_classes) with num_classes > 1. Received: y_pred.shape=(None, 1). Consider using 'binary_crossentropy' if you only have 2 classes.\n",
-      "  return dispatch_target(*args, **kwargs)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "250/250 [==============================] - 2s 5ms/step - loss: 0.0000e+00 - accuracy: 0.7904 - val_loss: 0.0000e+00 - val_accuracy: 0.8035\n",
+      "250/250 [==============================] - 2s 3ms/step - loss: 11272.8525 - accuracy: 0.7869 - val_loss: 147.2361 - val_accuracy: 0.7925\n",
       "Epoch 2/100\n",
-      "250/250 [==============================] - 1s 3ms/step - loss: 0.0000e+00 - accuracy: 0.7945 - val_loss: 0.0000e+00 - val_accuracy: 0.8035\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 45.8430 - accuracy: 0.7244 - val_loss: 15.6476 - val_accuracy: 0.7830\n",
       "Epoch 3/100\n",
-      "250/250 [==============================] - 1s 3ms/step - loss: 0.0000e+00 - accuracy: 0.7945 - val_loss: 0.0000e+00 - val_accuracy: 0.8035\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 18.4039 - accuracy: 0.7374 - val_loss: 21.8151 - val_accuracy: 0.6300\n",
       "Epoch 4/100\n",
-      "250/250 [==============================] - 1s 3ms/step - loss: 0.0000e+00 - accuracy: 0.7945 - val_loss: 0.0000e+00 - val_accuracy: 0.8035\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 20.4825 - accuracy: 0.7306 - val_loss: 12.2222 - val_accuracy: 0.7990\n",
       "Epoch 5/100\n",
-      "250/250 [==============================] - 1s 3ms/step - loss: 0.0000e+00 - accuracy: 0.7945 - val_loss: 0.0000e+00 - val_accuracy: 0.8035\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 13.2792 - accuracy: 0.7345 - val_loss: 28.1557 - val_accuracy: 0.8135\n",
       "Epoch 6/100\n",
-      "250/250 [==============================] - 1s 3ms/step - loss: 0.0000e+00 - accuracy: 0.7945 - val_loss: 0.0000e+00 - val_accuracy: 0.8035\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 15.2973 - accuracy: 0.7371 - val_loss: 14.1420 - val_accuracy: 0.7390\n",
       "Epoch 7/100\n",
-      "250/250 [==============================] - 1s 3ms/step - loss: 0.0000e+00 - accuracy: 0.7945 - val_loss: 0.0000e+00 - val_accuracy: 0.8035\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 13.8185 - accuracy: 0.7346 - val_loss: 11.9645 - val_accuracy: 0.5265\n",
       "Epoch 8/100\n",
-      "250/250 [==============================] - 1s 3ms/step - loss: 0.0000e+00 - accuracy: 0.7945 - val_loss: 0.0000e+00 - val_accuracy: 0.8035\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 12.1796 - accuracy: 0.7366 - val_loss: 9.7295 - val_accuracy: 0.5550\n",
       "Epoch 9/100\n",
-      "250/250 [==============================] - 1s 3ms/step - loss: 0.0000e+00 - accuracy: 0.7945 - val_loss: 0.0000e+00 - val_accuracy: 0.8035\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 10.4123 - accuracy: 0.7354 - val_loss: 5.9488 - val_accuracy: 0.7635\n",
       "Epoch 10/100\n",
-      "250/250 [==============================] - 1s 3ms/step - loss: 0.0000e+00 - accuracy: 0.7945 - val_loss: 0.0000e+00 - val_accuracy: 0.8035\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 10.0852 - accuracy: 0.7427 - val_loss: 3.5096 - val_accuracy: 0.8045\n",
       "Epoch 11/100\n",
-      "250/250 [==============================] - 1s 3ms/step - loss: 0.0000e+00 - accuracy: 0.7945 - val_loss: 0.0000e+00 - val_accuracy: 0.8035\n"
+      "250/250 [==============================] - 1s 2ms/step - loss: 11.6298 - accuracy: 0.7377 - val_loss: 15.6140 - val_accuracy: 0.7975\n",
+      "Epoch 12/100\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 9.6324 - accuracy: 0.7411 - val_loss: 10.5630 - val_accuracy: 0.8065\n",
+      "Epoch 13/100\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 11.1667 - accuracy: 0.7387 - val_loss: 2.9819 - val_accuracy: 0.7505\n",
+      "Epoch 14/100\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 10.6410 - accuracy: 0.7371 - val_loss: 25.1332 - val_accuracy: 0.4285\n",
+      "Epoch 15/100\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 15.2823 - accuracy: 0.7389 - val_loss: 10.7556 - val_accuracy: 0.7675\n",
+      "Epoch 16/100\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 11.2460 - accuracy: 0.7320 - val_loss: 26.5680 - val_accuracy: 0.8130\n",
+      "Epoch 17/100\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 13.8352 - accuracy: 0.7314 - val_loss: 5.9685 - val_accuracy: 0.7370\n",
+      "Epoch 18/100\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 11.4341 - accuracy: 0.7400 - val_loss: 8.8172 - val_accuracy: 0.8155\n",
+      "Epoch 19/100\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 11.1982 - accuracy: 0.7408 - val_loss: 14.0804 - val_accuracy: 0.8160\n",
+      "Epoch 20/100\n",
+      "250/250 [==============================] - 1s 3ms/step - loss: 11.3245 - accuracy: 0.7365 - val_loss: 11.9659 - val_accuracy: 0.8155\n",
+      "Epoch 21/100\n",
+      "250/250 [==============================] - 1s 2ms/step - loss: 13.9307 - accuracy: 0.7301 - val_loss: 7.2376 - val_accuracy: 0.6890\n",
+      "Epoch 22/100\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 13.4373 - accuracy: 0.7280 - val_loss: 15.7068 - val_accuracy: 0.6475\n",
+      "Epoch 23/100\n",
+      "250/250 [==============================] - 0s 2ms/step - loss: 13.0932 - accuracy: 0.7430 - val_loss: 21.1603 - val_accuracy: 0.6395\n"
      ]
     }
    ],
@@ -1800,7 +1791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1818,7 +1809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1837,20 +1828,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-bf964094b6ee2cb7\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-e2b84f60c9c3eb69\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-bf964094b6ee2cb7\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-e2b84f60c9c3eb69\");\n",
        "          const url = new URL(\"/\", window.location);\n",
-       "          const port = 6006;\n",
+       "          const port = 6007;\n",
        "          if (port) {\n",
        "            url.port = port;\n",
        "          }\n",
@@ -1868,7 +1859,7 @@
     }
    ],
    "source": [
-    "%tensorboard --logdir logs/fit/20250321-012229"
+    "%tensorboard --logdir logs/fit/20250321-102843"
    ]
   }
  ],
